--- a/src/resources/adminPanel/src/css/admin.css
+++ b/src/resources/adminPanel/src/css/admin.css
@@ -23,11 +23,11 @@
     margin: 2%;
 }
 .reg-form{
-    width: 70%;
+    width: 90%;
 }
 .employee-reg-credentials{
     width: 100%;
-    margin: 1%;
+    margin: 2%;
 }
 .employee-reg-credentials-div{
     width: 45%;
@@ -39,4 +39,24 @@
 }
 .credential-input{
     font-size: 1em;
+}
+.credential-input-dropdown{
+    height: 30px;
+    width: 50%;
+    font-size:1em ;
+}
+.employee-reg-form-buttons{
+    width: 100%;
+    margin-top: 3%;
+}
+.reg-form-submit-button{
+    padding: 1% 5%;
+    font-size: 1em;
+    font-weight: 500;
+    letter-spacing: 1px;
+    background-color:#0076a6;
+    border: 0.8px solid #0076a6 ;
+    border-radius: 10px;
+    color: white;
+
 }
