--- a/src/resources/adminPanel/src/css/registerationForm.css
+++ b/src/resources/adminPanel/src/css/registerationForm.css
@@ -32,6 +32,7 @@
 .employee-reg-form-buttons{
     width: 100%;
     margin-top: 3%;
+    margin: 2%;
 }
 .reg-form-submit-button{
     padding: 1% 5%;
@@ -42,5 +43,7 @@
     border: 0.8px solid #0076a6 ;
     border-radius: 10px;
     color: white;
+    margin: 2%;
+    cursor: pointer;
 
 }
