--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -1,5 +1,5 @@
 .admin-image{
-    background-image: url(../../../../../public/image/admin-logo.png);
+    background-image: url(../../public/image/admin-logo.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100px;
